fix: S3Service 수정 (#40)